Implementing SonarQueb feedback.